--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "git+https://github.com/poypoy252525/hianime.git"
   },
-  "homepage": "https://github.com/poypoy252525/hianime#readme",
+  "homepage": "https://hianime.mintlify.app/",
   "bugs": {
     "url": "https://github.com/poypoy252525/hianime/issues"
   },
