--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hianime",
   "version": "1.3.1",
+  "$schema": "https://json.schemastore.org/package",
   "description": "a scraper for hianime",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
