--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
-{
+ {
   "name": "hianime",
   "version": "1.3.3",
   "$schema": "https://json.schemastore.org/package",
   "description": "a scraper for hianime",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/poypoy252525/hianime.git"
@@ -14,8 +22,8 @@
     "url": "https://github.com/poypoy252525/hianime/issues"
   },
   "scripts": {
-    "build": "tsc",
-    "start": "node ./dist/index.js",
+    "build": "tsup src/index.ts --format esm,cjs --dts --out-dir dist --clean",
+    "start": "node ./dist/index.cjs",
     "dev": "ts-node-dev --respawn --transpile-only test/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -39,6 +47,7 @@
   "type": "commonjs",
   "devDependencies": {
     "ts-node-dev": "^2.0.0",
+    "tsup": "^8.5.0",
     "typescript": "^5.9.2"
   },
   "dependencies": {
