--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "scripts": {
     "build": "tsup src/index.ts --format esm,cjs --dts --out-dir dist --clean",
-    "start": "node ./dist/index.cjs",
+    "start": "node ./dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only test/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
